--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <ul>
                     <li> <a href="#"> Home </a> </li>
                     <li> <a href="#"> Blog </a> </li>
-                    <li> <a href="#"> Communit </a> </li>
+                    <li> <a href="#"> Community </a> </li>
                     <li> <a href="#"> Services </a> </li>
                 </ul>
             </div>
