--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
             <div class="cards">
                 <div class="card">
-                    <img src="/images/card1.jpg" alt="image1">
+                    <img src="images/card1.jpg" alt="image1">
                     <div>
                         <p>Transforming banking with secure and decentralized solutions.</p>
                         <div class="readmore">
@@ -186,7 +186,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="/images/card2.jpg" alt="iamge2">
+                    <img src="images/card2.jpg" alt="iamge2">
                     <div>
                         <p>Ensuring transparency and traceability worldwide.</p>
                         <div class="readmore">
@@ -196,7 +196,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="/images/card3.jpg" alt="image3">
+                    <img src="images/card3.jpg" alt="image3">
                     <div>
                         <p>Expanding blockchain with NFTs, dApps and Web3..</p>
                         <div class="readmore">
@@ -212,7 +212,7 @@
         <!-- Section 6: Contact us -->
         <section class="contact-us clearfix">
             <div class="contact-image">
-                <img id="img2" src="/images/telephone1.png" alt="Contact Us" width="200">
+                <img id="img2" src="images/telephone1.png" alt="Contact Us" width="200">
             </div>
             
             <div class="form">
